<resources>
    <string name="app_name">周周记账</string>

    <string name="title_new">记一笔</string>
    <string name="title_setting">设置</string>
    <string name="title_edit">修改</string>
    <string name="title_search">搜索</string>
    <string name="title_search_result">搜索结果</string>

    <string name="button_ok">确定</string>
    <string name="button_cancel">取消</string>
    <string name="dialog_tip">提示</string>
    <string name="delete_confirm">确定删除此条记录吗？</string>

    <string name="empty_tip">没有相应的记录哦！</string>
    <string name="hint_empty">""</string>

    <string name="item_arrow"><![CDATA[>]]></string>

    <string name="share_text">周周记账，一个使用方便的记账APP，随时随地满足大家的记账需求哦！（＾_＾）</string>

    <!-- tab标题 -->
    <string name="tab_add">新的</string>
    <string name="tab_report_list">记录</string>
    <string name="tab_report_chart">统计</string>
    <string name="tab_setting">设置</string>

    <!-- 金额字符 -->
    <string name="rmb_symbol">¥</string>
    <string name="rmb_unit">元</string>

    <!-- 数字键盘 -->
    <string name="num_1">1</string>
    <string name="num_2">2</string>
    <string name="num_3">3</string>
    <string name="num_4">4</string>
    <string name="num_5">5</string>
    <string name="num_6">6</string>
    <string name="num_7">7</string>
    <string name="num_8">8</string>
    <string name="num_9">9</string>
    <string name="num_0">0</string>
    <string name="num_dot">.</string>
    <string name="num_del">DEL</string>
    <string name="num_ok">OK</string>

    <!-- imageView contentDescription -->
    <string name="icon_content_description">icon for accounts type</string>

    <!-- set_comment , set_date -->
    <string name="set_comment">备注</string>
    <string name="set_comment_hint">在这里写下您要备注的内容吧！</string>
    <string name="set_date">时间</string>
    <string name="set_date_title">设置时间</string>
    <string name="vertical_divider">|</string>

    <!-- edit account strings -->
    <string name="edit_amount_tab">金额：</string>
    <string name="edit_datetime_tab">时间：</string>
    <string name="edit_comment_tab">备注：</string>
    <string name="edit_type_tab">类别：</string>

    <!-- search title strings -->
    <string name="search_type">类别</string>
    <string name="search_datetime">时间</string>
    <string name="search_datetime_prepare">快捷选择</string>
    <string name="search_datetime_custom">自由选择</string>
    <string name="search_datetime_start">开始时间：</string>
    <string name="search_datetime_end">结束时间：</string>

    <!-- setting title strings -->
    <string name="setting_about">关于周周记账</string>
    <string name="setting_feedback">意见反馈</string>
    <string name="setting_update">版本更新</string>
    <string name="setting_share">分享好友</string>
    <string name="setting_user_agreement">用户协议</string>
    <string name="setting_feedback_content_hint">请在这里写下您对记一笔的意见，我们将不断努力改进，感谢支持！</string>
    <string name="setting_feedback_address_hint">您的电话/QQ/邮箱(可选)，以便我们与您联系</string>
    <string name="setting_select_error_log">同时发送错误日志</string>
    <string name="setting_about_contact_us">联系我们：yutianfei1127@163.com</string>
    <string name="setting_about_introduction">随时随地方便您的记账需求</string>
    <string name="setting_about_copyright_have">版权所有</string>
    <string name="setting_about_version"> v</string>
    <string name="update_version_string">当前版本：%1$s\n\n最新版本：%2$s</string>

</resources>