<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableRow
        style="@style/style_number_button_row"
        android:layout_marginBottom="1dp">

        <Button
            android:id="@+id/btn_number_1"
            style="@style/style_number_button"
            android:layout_marginEnd="1dp"
            android:text="@string/num_1" />

        <Button
            android:id="@+id/btn_number_2"
            style="@style/style_number_button"
            android:layout_marginEnd="1dp"
            android:text="@string/num_2" />

        <Button
            android:id="@+id/btn_number_3"
            style="@style/style_number_button"
            android:layout_marginEnd="0dp"
            android:text="@string/num_3" />
    </TableRow>

    <TableRow
        style="@style/style_number_button_row"
        android:layout_marginBottom="1dp">

        <Button
            android:id="@+id/btn_number_4"
            style="@style/style_number_button"
            android:layout_marginEnd="1dp"
            android:text="@string/num_4" />

        <Button
            android:id="@+id/btn_number_5"
            style="@style/style_number_button"
            android:layout_marginEnd="1dp"
            android:text="@string/num_5" />

        <Button
            android:id="@+id/btn_number_6"
            style="@style/style_number_button"
            android:text="@string/num_6" />
    </TableRow>

    <TableRow
        style="@style/style_number_button_row"
        android:layout_marginBottom="1dp">

        <Button
            android:id="@+id/btn_number_7"
            style="@style/style_number_button"
            android:layout_marginEnd="1dp"
            android:text="@string/num_7" />

        <Button
            android:id="@+id/btn_number_8"
            style="@style/style_number_button"
            android:layout_marginEnd="1dp"
            android:text="@string/num_8" />

        <Button
            android:id="@+id/btn_number_9"
            style="@style/style_number_button"
            android:text="@string/num_9" />
    </TableRow>

    <TableRow
        style="@style/style_number_button_row">
        <Button
            android:id="@+id/btn_number_dot"
            style="@style/style_number_button"
            android:layout_marginEnd="1dp"
            android:text="@string/num_dot" />

        <Button
            android:id="@+id/btn_number_0"
            style="@style/style_number_button"
            android:layout_marginEnd="1dp"
            android:text="@string/num_0" />

        <ImageButton
            android:id="@+id/btn_number_del"
            style="@style/style_number_button"
            android:src="@mipmap/number_delete_button"
            android:contentDescription="@string/icon_content_description"/>
    </TableRow>
</TableLayout>