<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/title_bar_layout" />

    <EditText
        android:id="@+id/id_edit_feedback_content"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_setting_item"
        android:gravity="top|start"
        android:hint="@string/setting_feedback_content_hint"
        android:padding="10dp"
        android:textColor="@color/color_text_normal"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/id_edit_feedback_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_setting_item"
        android:gravity="top|start"
        android:hint="@string/setting_feedback_address_hint"
        android:maxLines="1"
        android:padding="10dp"
        android:textColor="@color/color_text_normal"
        android:textSize="16sp" />

    <LinearLayout
        android:id="@+id/id_select_error_log"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/id_select_error_log_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_select_error_log"
            android:textColor="@color/color_text_normal"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>